--- a/ProgramList.TelerikPOC/ProgramList.TelerikPOC.csproj
+++ b/ProgramList.TelerikPOC/ProgramList.TelerikPOC.csproj
@@ -28,6 +28,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>..\..\..\5.1SP\JeevesDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,6 +40,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugNoCA|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\DebugNoCA\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -95,6 +107,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>TelerikBin\Telerik.Windows.Themes.Material.dll</HintPath>
     </Reference>
+    <Reference Include="Telerik.Windows.Themes.Office_Black">
+      <HintPath>TelerikBin\Telerik.Windows.Themes.Office_Black.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -132,18 +147,8 @@
     <Compile Include="Columns\ChartColumnInfo.cs" />
     <Compile Include="Columns\ColumnExtensions.cs" />
     <Compile Include="Columns\ImageColumnInfo.cs" />
-    <Compile Include="Models\ChartModel.cs" />
-    <Compile Include="Models\ChartPoint.cs" />
-    <Compile Include="Models\CustomProperty.cs" />
     <Compile Include="Columns\DateTimeColumnInfo.cs" />
     <Compile Include="Columns\DropDownColumnInfo.cs" />
-    <Compile Include="Models\DropDownItem.cs" />
-    <Compile Include="Models\DropDownModel.cs" />
-    <Compile Include="Models\ICustomisation.cs" />
-    <Compile Include="Models\NormalModel.cs" />
-    <Compile Include="Models\ListItemBase.cs" />
-    <Compile Include="DynamicType\RunTimeModelBase.cs" />
-    <Compile Include="DynamicType\RunTimeTypeHelper.cs" />
     <Compile Include="Converters\RGBToBrushConverter.cs" />
     <Compile Include="ViewModels\ListNavigationViewModel.cs" />
     <Compile Include="ViewModels\ProgramFormViewModel.cs" />
@@ -170,8 +175,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\ModelBase.cs" />
-    <Compile Include="Models\CellInfo.cs" />
     <Compile Include="Columns\ColumnInfo.cs" />
     <Compile Include="Views\ProgramWindowView.xaml.cs">
       <DependentUpon>ProgramWindowView.xaml</DependentUpon>
@@ -205,5 +208,12 @@
   <ItemGroup>
     <Resource Include="Images\Add.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProgramList.Common\ProgramList.Common.csproj">
+      <Project>{5683e0ea-5b91-4346-aada-d8832f213f2b}</Project>
+      <Name>ProgramList.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
