--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/ProgramList/v15
+/.vs
+/ProgramList.Common/bin
+/ProgramList.Common/obj
+/ProgramList.TelerikPOC/bin
+/ProgramList.TelerikPOC/obj
