--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 /ProgramList.Common/obj
 /ProgramList.TelerikPOC/bin
 /ProgramList.TelerikPOC/obj
-/LoadingProblem/bin
-/LoadingProblem/obj
+/ReferenceApp/bin
+/ReferenceApp/obj
