--- a/DevX/.gitignore
+++ b/DevX/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/ProgramList.Devx/obj
+/ProgramList.Devx/bin
