--- a/DevX/ProgramList.Devx/ProgramList.DevX.csproj
+++ b/DevX/ProgramList.Devx/ProgramList.DevX.csproj
@@ -39,6 +39,8 @@
     <Reference Include="DevExpress.Data.v17.1" />
     <Reference Include="DevExpress.Printing.v17.1.Core" />
     <Reference Include="DevExpress.Mvvm.v17.1" />
+    <Reference Include="DevExpress.Xpf.Grid.v17.1, Version=17.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Xpf.Grid.v17.1.Core, Version=17.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Xpf.Themes.Office2016White.v17.1" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -59,6 +61,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DynamicType\CustomDictionary.cs" />
+    <Compile Include="DynamicType\CustomProperty.cs" />
+    <Compile Include="DynamicType\RunTimeModelBase.cs" />
+    <Compile Include="DynamicType\RunTimeTypeHelper.cs" />
+    <Compile Include="Models\CellInfo.cs" />
+    <Compile Include="Models\ChartPoint.cs" />
+    <Compile Include="Models\ChartPointCollection.cs" />
+    <Compile Include="Models\DropDownItem.cs" />
+    <Compile Include="Models\DropDownItemCollection.cs" />
+    <Compile Include="Models\IColumnInfo.cs" />
+    <Compile Include="Models\ICustomisation.cs" />
+    <Compile Include="Models\ListItemBase.cs" />
+    <Compile Include="Models\ModelBase.cs" />
+    <Compile Include="Models\NormalModel.cs" />
+    <Compile Include="Models\RangeObservableCollection.cs" />
+    <Compile Include="ViewModels\ProgramListViewModelBase.cs" />
     <Compile Include="Views\ProgramListView.xaml.cs">
       <DependentUpon>ProgramListView.xaml</DependentUpon>
     </Compile>
@@ -93,6 +111,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Properties\Licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -104,6 +123,7 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
