--- a/Common/ProgramList.Common/ProgramList.Common.csproj
+++ b/Common/ProgramList.Common/ProgramList.Common.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Telerik.Windows.Data">
-      <HintPath>..\ProgramList.TelerikPOC\TelerikBin\Telerik.Windows.Data.dll</HintPath>
+      <HintPath>..\..\Telerik\ProgramList.TelerikPOC\TelerikBin\Telerik.Windows.Data.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
