Completed initial evaluation

--- a/DevX/ProgramList.Devx/ProgramList.DevX.csproj
+++ b/DevX/ProgramList.Devx/ProgramList.DevX.csproj
@@ -82,6 +82,10 @@
     <Compile Include="Columns\DropDownColumnInfo.cs" />
     <Compile Include="Columns\ImageColumnInfo.cs" />
     <Compile Include="Converters\RGBToBrushConverter.cs" />
+    <Compile Include="Models\INotifyCollectionStateProvider.cs" />
+    <Compile Include="Models\MyCollection.cs" />
+    <Compile Include="Models\MyObservableCollectionEx.cs" />
+    <Compile Include="Models\ObservableCollectionEx.cs" />
     <Compile Include="ViewModels\ProgramListViewModel.cs" />
     <Compile Include="ViewModels\ProgramListViewModelHelper.cs" />
     <Compile Include="Views\ProgramListView.xaml.cs">
@@ -137,9 +141,7 @@
       <Name>ProgramList.Common</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
