--- a/Common/ProgramList.Common/ProgramList.Common.csproj
+++ b/Common/ProgramList.Common/ProgramList.Common.csproj
@@ -47,6 +47,8 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,6 +60,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\RGBToBrushConverter.cs" />
     <Compile Include="DynamicType\CustomDictionary.cs" />
     <Compile Include="DynamicType\RuntimeHelperV2.cs" />
     <Compile Include="DynamicType\RunTimeTypeHelper.cs" />
@@ -76,6 +79,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ProgramListViewModelBase.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\Add.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
