remove temp files

--- a/Infragistics/.gitignore
+++ b/Infragistics/.gitignore
@@ -3,5 +3,5 @@
 ################################################################################
 
 /.vs
-/ProgramList.Infragistics/obj
-/ProgramList.Infragistics/bin
+/ProgramList.InfragisticsPOC/obj
+/ProgramList.InfragisticsPOC/bin
