--- a/C1/ProgramList.C1FlexGrid/ProgramList.C1FlexGrid.csproj
+++ b/C1/ProgramList.C1FlexGrid/ProgramList.C1FlexGrid.csproj
@@ -83,6 +83,9 @@
     <Compile Include="Views\ProgramListView.xaml.cs">
       <DependentUpon>ProgramListView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ProgramListWindow.xaml.cs">
+      <DependentUpon>ProgramListWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,6 +99,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\ProgramListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ProgramListWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
