--- a/Infragistics/ProgramList.InfragisticsPOC/ProgramList.InfragisticsPOC.csproj
+++ b/Infragistics/ProgramList.InfragisticsPOC/ProgramList.InfragisticsPOC.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Views\ProgramListView.xaml.cs">
       <DependentUpon>ProgramListView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ProgramListWindow.xaml.cs">
+      <DependentUpon>ProgramListWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -104,6 +107,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\ProgramListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ProgramListWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
