--- a/Telerik/ProgramList.TelerikPOC/ProgramList.TelerikPOC.csproj
+++ b/Telerik/ProgramList.TelerikPOC/ProgramList.TelerikPOC.csproj
@@ -161,6 +161,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Views\ProgramListWindow.xaml.cs">
+      <DependentUpon>ProgramListWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Styles\ProgramListDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -193,6 +196,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\ProgramListWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Columns\ColumnInfo.cs" />
