--- a/Telerik/ProgramList.TelerikPOC/ProgramList.TelerikPOC.csproj
+++ b/Telerik/ProgramList.TelerikPOC/ProgramList.TelerikPOC.csproj
@@ -79,78 +79,78 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="Telerik.Windows.Controls, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.Controls">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.Controls.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Controls.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Windows.Controls.Chart, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.Controls.Chart">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.Controls.Chart.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Controls.Chart.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Windows.Controls.GridView, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.Controls.GridView">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.Controls.GridView.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Controls.GridView.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Windows.Controls.Input, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.Controls.Input">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.Controls.Input.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Controls.Input.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Windows.Data, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.Data">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.Data.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Windows.PersistenceFramework, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.PersistenceFramework">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.PersistenceFramework.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.PersistenceFramework.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Expression_Dark">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Expression_Dark.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Expression_Dark.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Green">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Green.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Green.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Windows.Themes.Material, Version=2017.2.614.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+    <Reference Include="Telerik.Windows.Themes.Material">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Material.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Material.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Office2013">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Office2013.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Office2013.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Office2016">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Office2016.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Office2016.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Office2016Touch">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Office2016Touch.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Office2016Touch.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Office_Black">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Office_Black.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Office_Black.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Office_Blue">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Office_Blue.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Office_Blue.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Office_Silver">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Office_Silver.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Office_Silver.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Summer">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Summer.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Summer.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Transparent">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Transparent.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Transparent.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Vista">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Vista.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Vista.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.VisualStudio2013">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.VisualStudio2013.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.VisualStudio2013.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Windows7">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Windows7.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Windows7.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Windows8">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Windows8.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Windows8.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.Windows.Themes.Windows8Touch">
-      <HintPath>TelerikBin\Telerik.Windows.Themes.Windows8Touch.dll</HintPath>
+      <HintPath>%TelerikWPFDir%\Binaries.NoXaml\WPF45\Telerik.Windows.Themes.Windows8Touch.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
