custom grid classes

--- a/DevX/ProgramList.DevX.Models/ProgramList.DevX.Models.csproj
+++ b/DevX/ProgramList.DevX.Models/ProgramList.DevX.Models.csproj
@@ -33,7 +33,9 @@
   <ItemGroup>
     <Reference Include="DevExpress.Data.v19.1, Version=19.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Xpf.Core.v19.1, Version=19.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpf.Grid.v19.1.Core, Version=19.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseModel.cs" />
+    <Compile Include="BooleanToTextConverter.cs" />
     <Compile Include="CellInfo.cs" />
     <Compile Include="CellInfoDescriptor.cs" />
     <Compile Include="CellType.cs" />
@@ -53,15 +56,23 @@
     <Compile Include="DropDownItemCollection.cs" />
     <Compile Include="DynamicModel.cs" />
     <Compile Include="DynamicModelCollection.cs" />
+    <Compile Include="GridColumnWidthConverter.cs" />
+    <Compile Include="HeaderRightUpMouseEventConverter.cs" />
     <Compile Include="IColumnInfo.cs" />
     <Compile Include="ICustomisation.cs" />
     <Compile Include="IListItemBase.cs" />
     <Compile Include="IProgramListViewModel.cs" />
     <Compile Include="DefaultColumnInfo.cs" />
     <Compile Include="DropDownColumnInfo.cs" />
+    <Compile Include="IsListTypeSourceConverter.cs" />
     <Compile Include="ListColumnAlignment.cs" />
+    <Compile Include="MarkedRowConverter.cs" />
     <Compile Include="ModelDataDictionary.cs" />
+    <Compile Include="NotNullConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnlyListModeConverter.cs" />
+    <Compile Include="RGBToBrushConverter.cs" />
+    <Compile Include="UnsavedRowConverter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
