--- a/DevX/ProgramList.DevX.Final/ProgramList.DevX.Final.csproj
+++ b/DevX/ProgramList.DevX.Final/ProgramList.DevX.Final.csproj
@@ -82,6 +82,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DevExpressGridDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,6 +94,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ColumnTemplateSelector.cs" />
+    <Compile Include="ListColumn.cs" />
+    <Compile Include="ListGrid.cs" />
+    <Compile Include="ListView.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
